Viewport Color Chage with Overlay "Fade 3D Objects" #56529

Closed
opened 2018-08-25 00:00:59 +02:00 by Telmo Silva · 8 comments

System Information
Fedora Workstation 28

Blender Version
0cf12dfc14

When drawing with grease pencil with the overlay option "fade 3d objects" active, the viewport color changes to a lighter tone.

**System Information** Fedora Workstation 28 **Blender Version** 0cf12dfc14f When drawing with grease pencil with the overlay option "fade 3d objects" active, the viewport color changes to a lighter tone.
Author

Added subscriber: @nottelmo-4

Added subscriber: @nottelmo-4
Telmo Silva changed title from [GLITCH] Overlay > Fade 3D Objects with GP to Viewport Color Chage with Overlay "Fade 3D Objects" 2018-08-25 00:04:33 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Please mention GPU model, and attach a .blend to reproduce the problem in.

Please mention GPU model, and attach a .blend to reproduce the problem in.
Author

test_it.blend

bug_recording.webm

system-info.txt

Uploaded a Screen Record, a .blend file and system-info file.

Using a Wacom Intuos Medium, but can also be reproduced with touchpad.

[test_it.blend](https://archive.blender.org/developer/F4388173/test_it.blend) [bug_recording.webm](https://archive.blender.org/developer/F4388172/bug_recording.webm) [system-info.txt](https://archive.blender.org/developer/F4388170/system-info.txt) Uploaded a Screen Record, a .blend file and system-info file. Using a Wacom Intuos Medium, but can also be reproduced with touchpad.
Antonio Vazquez was assigned by Brecht Van Lommel 2018-08-28 14:32:30 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

Confirmed. @antoniov, can you check?

Confirmed. @antoniov, can you check?

This issue was referenced by 5155c51844

This issue was referenced by 5155c51844181400d154ef4245978e832c97e698

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56529
No description provided.