Fix T56529: Viewport ColorChage with Overlay "Fade 3D Objects"